force-app/main/default/objects/Workforce_Access_Risk__c/Workforce_Access_Risk__c.object-meta.xml
<CustomObject>
    <label>Workforce Access Risk</label>
    <pluralLabel>Workforce Access Risks</pluralLabel>
    <description>Per-user PHI access risk scores produced by the Workforce Access Risk Engine (issue #213, HIPAA pack) for minimum-necessary enforcement.</description>
    <nameField>
        <label>Workforce Access Risk Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>