force-app/main/default/objects/Workforce_Access_Risk__c/fields/Evaluated_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Date__c</fullName>
    <description>Timestamp of the most recent risk evaluation for this user.</description>
    <label>Evaluated Date</label>
    <type>DateTime</type>
</CustomField>