force-app/main/default/objects/Workforce_Access_Risk__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <description>Human-readable summary of the user's PHI object access used to justify the score.</description>
    <label>Findings</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>