force-app/main/default/objects/Workforce_Access_Risk__c/fields/Over_Privileged__c.field-meta.xml
<CustomField>
    <fullName>Over_Privileged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the user can read at least half of the classified PHI-bearing objects (potential minimum-necessary violation).</description>
    <label>Over Privileged</label>
    <type>Checkbox</type>
</CustomField>