force-app/main/default/objects/Workforce_Access_Risk__c/fields/PHI_Object_Count__c.field-meta.xml
<CustomField>
    <fullName>PHI_Object_Count__c</fullName>
    <description>Number of classified PHI-bearing objects the user can read.</description>
    <label>PHI Object Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>