force-app/main/default/objects/Workforce_Access_Risk__c/fields/PHI_Objects_Total__c.field-meta.xml
<CustomField>
    <fullName>PHI_Objects_Total__c</fullName>
    <description>Total number of classified PHI-bearing objects at evaluation time (denominator for the risk score).</description>
    <label>PHI Objects Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>