force-app/main/default/objects/Workforce_Access_Risk__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>PHI access risk score (0-100), the percentage of classified PHI-bearing objects the user can read.</description>
    <label>Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>