force-app/main/default/objects/Workforce_Access_Risk__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>The user whose PHI access risk is recorded.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Workforce Access Risks</relationshipLabel>
    <relationshipName>Workforce_Access_Risks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>