force-app/main/default/objects/Workforce_Access_Risk__c/fields/User_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Key__c</fullName>
    <description>The User Id, used as a unique upsert key so each user has a single current risk record.</description>
    <externalId>true</externalId>
    <label>User Key</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>